--- a/documentation/asciidoc/topics/proc_creating_minikube_site_secrets.adoc
+++ b/documentation/asciidoc/topics/proc_creating_minikube_site_secrets.adoc
@@ -8,7 +8,7 @@ with each other.
 
 . Create secrets on each site that contain `ca.crt`, `client.crt`, and `client.key` from your Minikube installation.
 +
-For example, do the following on SiteB:
+For example, do the following on **LON**:
 +
 [source,options="nowrap",subs=attributes+]
 ----
