--- a/documentation/asciidoc/topics/proc_encrypting_endpoints_tls_secret.adoc
+++ b/documentation/asciidoc/topics/proc_encrypting_endpoints_tls_secret.adoc
@@ -5,7 +5,7 @@ between clients and {brandname} clusters.
 
 .Prerequisites
 
-Create a custom resource definition for either a keystore or certificate secret. See:
+Create either a keystore or certificate secret. See:
 
 * link:#ref_tls_cert_secret-security[Certificate Secrets]
 * link:#ref_tls_keystore_secret-security[Keystore Secrets]
@@ -19,7 +19,8 @@ Create a custom resource definition for either a keystore or certificate secret.
 $ {oc_apply_cr} tls_secret.yaml
 ----
 +
-. Modify your custom resource definition to include the encryption secret and then apply the changes.
+. Specify the encryption secret with `spec.security.endpointEncryption` in your
+**Infinispan** CR and then apply the changes.
 +
 [source,options="nowrap",subs=attributes+]
 ----
