--- a/documentation/asciidoc/topics/proc_getting_internal_service.adoc
+++ b/documentation/asciidoc/topics/proc_getting_internal_service.adoc
@@ -1,12 +1,10 @@
 [id='internal_service-{context}']
-= Internal Service
+= Getting the Service for Internal Connections
 By default, {ispn_operator} creates a service that provides access to
-{brandname} clusters within {k8s}.
+{brandname} clusters from clients running in {k8s}.
 
-The internal service has the same name that you give to your {brandname}
-cluster.
-
-For example:
+This internal service has the same name as your {brandname} cluster, for
+example:
 
 [source,yaml,options="nowrap",subs=attributes+]
 ----
@@ -14,10 +12,10 @@ metadata:
   name: {example_crd_name}
 ----
 
-Results in an internal service named `{example_crd_name}`.
+.Procedure
 
-You can verify the internal service is available as follows:
-
+* Check that the internal service is available as follows:
++
 [source,options="nowrap",subs=attributes+]
 ----
 $ {oc_get_services}
@@ -26,7 +24,6 @@ NAME               TYPE        CLUSTER-IP       EXTERNAL-IP   PORT(S)
 {example_crd_name} ClusterIP   192.0.2.0        <none>        11222/TCP
 ----
 
-[NOTE]
-====
-{ispn_operator} also creates an internal `-ping` service. See link:#ref_services-reference[Network Services].
-====
+.Reference
+
+* link:#ref_services-reference[Network Services]
