--- a/documentation/asciidoc/topics/ref_container_storage.adoc
+++ b/documentation/asciidoc/topics/ref_container_storage.adoc
@@ -6,15 +6,15 @@
 include::yaml_annotated/cr_container_storage.yaml[]
 ----
 
-<1> configures the storage size for {datagridservice} pods.
+<1> Configures the storage size for {datagridservice} nodes.
 
 By default, {ispn_operator} allocates `1Gi` for storage for both
-{cacheservice} and {datagridservice} pods. You can configure storage size only
-for {datagridservice} pods.
+{cacheservice} and {datagridservice} nodes. You can configure storage size only
+for {datagridservice} nodes.
 
 .Persistence
-{datagridservice} pods let you configure caches with persistent storage, as in
-the following example:
+{datagridservice} lets you configure Single File cache stores for data
+persistence:
 
 [source,xml,options="nowrap",subs=attributes+]
 ----
@@ -24,4 +24,4 @@ include::config_examples/file_cache_store.xml[]
 .Reference
 
 * link:#shutdown[Shutting Down {brandname} Clusters]
-* link:#ref_pv-pods[Persistent Volume Claims]
+* link:#ref_pv-nodes[Persistent Volume Claims]
