--- a/documentation/asciidoc/topics/ref_secret_auth.adoc
+++ b/documentation/asciidoc/topics/ref_secret_auth.adoc
@@ -6,10 +6,10 @@
 include::yaml_annotated/secret_connect.yaml[]
 ----
 
-<1> names the authentication secret.
-<2> authentication secrets must be `Opaque`.
-<3> contains application users in `YAML` format.
-<4> lists credentials for application users.
+<1> Names the authentication secret.
+<2> Authentication secrets must be `Opaque`.
+<3> Contains application users in `YAML` format.
+<4> Lists credentials for application users.
 
 [IMPORTANT]
 ====
