--- a/documentation/asciidoc/topics/ref_secret_tls_keystore.adoc
+++ b/documentation/asciidoc/topics/ref_secret_tls_keystore.adoc
@@ -6,6 +6,6 @@
 include::yaml_annotated/secret_tls_keystore.yaml[]
 ----
 
-<1> specifies an alias for the keystore.
-<2> specifies a password for the keystore.
-<3> adds a base64 encoded keystore.
+<1> Specifies an alias for the keystore.
+<2> Specifies a password for the keystore.
+<3> Adds a base64 encoded keystore.
