--- a/documentation/asciidoc/stories/assembly_configuring_authentication.adoc
+++ b/documentation/asciidoc/stories/assembly_configuring_authentication.adoc
@@ -1,13 +1,12 @@
-[id='managing_cluster_credentials']
-:context: auth
+[id='authentication']
+:context: security
 = Configuring Authentication
 Application users must authenticate with {brandname} clusters. {ispn_operator}
 generates default credentials or you can add your own.
 
 include::{topics}/ref_default_credentials.adoc[leveloffset=+1]
 include::{topics}/proc_get_cluster_credentials.adoc[leveloffset=+1]
-include::{topics}/proc_create_cluster_auth.adoc[leveloffset=+1]
-include::{topics}/ref_secret_auth.adoc[leveloffset=+2]
+include::{topics}/proc_adding_custom_credentials.adoc[leveloffset=+1]
 
 // Restore the parent context.
 ifdef::parent-context[:context: {parent-context}]
