--- a/documentation/asciidoc/stories/assembly_connecting_remotely.adoc
+++ b/documentation/asciidoc/stories/assembly_connecting_remotely.adoc
@@ -1,12 +1,12 @@
-[id='remote_connections']
+[id='remote_access']
 :context: client
 = Connecting to {brandname} Clusters
 Connect to {brandname} via the REST or Hot Rod endpoints. You can then
 remotely create and modify cache definitions and store data across {brandname}
 clusters.
 
-The examples in this section use ${SERVICE_HOSTNAME} to denote the service or
-hostname that provides access to your {brandname} cluster.
+The examples in this section use `$SERVICE_HOSTNAME` to denote the service that
+provides access to your {brandname} cluster.
 
 Clients running in {k8s} can specify the name of the internal service that
 {ispn_operator} creates.
@@ -17,7 +17,7 @@ AWS, the service hostname could be:
 
 `.status.loadBalancer.ingress[0].hostname`
 
-On GCP or Azure, hostnames might be as follows: 
+On GCP or Azure, hostnames might be as follows:
 
 `.status.loadBalancer.ingress[0].ip`
 
