--- a/documentation/asciidoc/stories/assembly_creating_services.adoc
+++ b/documentation/asciidoc/stories/assembly_creating_services.adoc
@@ -1,10 +1,11 @@
 [id='creating_services']
-:context: services
+:context: nodes
 = Creating {brandname} Services
 {brandname} services are stateful applications that provide flexible and robust
 in-memory data storage.
 
 include::{topics}/con_cache_service.adoc[leveloffset=+1]
+include::{topics}/ref_default_cache_service_config.adoc[leveloffset=+2]
 include::{topics}/con_datagrid_service.adoc[leveloffset=+1]
 include::{topics}/proc_creating_services.adoc[leveloffset=+1]
 include::{topics}/ref_cache_service_crd.adoc[leveloffset=+2]
