--- a/documentation/asciidoc/stories/assembly_shutting_down.adoc
+++ b/documentation/asciidoc/stories/assembly_shutting_down.adoc
@@ -1,24 +1,23 @@
 [id='shutdown']
-:context: pods
+:context: nodes
 = Stopping and Starting {brandname} Services
 Gracefully shut down {brandname} clusters to avoid data loss.
 
 .Cache configuration
-Both {cacheservice} and {datagridservice} pods store permanent cache
-definitions in persistent volumes so they are still available after cluster
-restarts.
+Both {cacheservice} and {datagridservice} store permanent cache definitions in
+persistent volumes so they are still available after cluster restarts.
 
 .Data
-{datagridservice} pods write all cache entries to persistent storage during
-cluster shutdown. However, you must configure caches with persistence.
+{datagridservice} nodes can write all cache entries to persistent storage during
+cluster shutdown if you add cache stores.
 
 [IMPORTANT]
 ====
-You should configure the storage size for {datagridservice} pods to ensure that
+You should configure the storage size for {datagridservice} nodes to ensure that
 the persistent volume can hold all your data.
 
 If the available container storage is less than the amount of memory available
-to {datagridservice} pods, {brandname} writes an exception to logs and data
+to {datagridservice} nodes, {brandname} writes an exception to logs and data
 loss occurs during shutdown.
 ====
 
