--- a/documentation/asciidoc/topics/con_cache_service.adoc
+++ b/documentation/asciidoc/topics/con_cache_service.adoc
@@ -1,24 +1,20 @@
-[id='cache_services-{context}']
+[id='cache_service-{context}']
 = Cache Service
 {cacheservice} provides a volatile, low-latency data store that dramatically
 increases application response rates.
 
-{cacheservice} pods:
+{cacheservice} nodes:
 
 * Synchronously distribute data across the cluster to ensure consistency.
-* Maintain single copies of cache entries to reduce size. You can replicate
-data for more resiliency.
+* Maintain single copies of cache entries to reduce size.
 * Store cache entries off-heap and use eviction for JVM efficiency.
+* Ensure data consistency with a default partition handling configuration.
 
-[NOTE]
+[IMPORTANT]
 ====
 You can create multiple cache definitions with {cacheservice} but only as
 copies of the default configuration.
+
+If you update {cacheservice} nodes with the **Infinispan** CR or update the
+version, you lose all data in the cache.
 ====
-
-Default cache configuration for {cacheservice} pods is as follows:
-
-[source,xml,options="nowrap",subs=attributes+]
-----
-include::config_examples/cache_service_default_cache.xml[]
-----
