--- a/documentation/asciidoc/topics/con_datagrid_service.adoc
+++ b/documentation/asciidoc/topics/con_datagrid_service.adoc
@@ -4,12 +4,11 @@
 {k8s}.
 
 * Use with advanced capabilities like cross-site replication as well as indexing and querying.
-* Remotely access {datagridservice} clusters from Hot Rod or
-REST clients and dynamically create caches using any {brandname} cache mode and
-configuration.
+* Remotely access {datagridservice} clusters from Hot Rod or REST clients and
+dynamically create caches using any {brandname} cache mode and configuration.
 +
 [NOTE]
 ====
-{brandname} does not provide default caches for {datagridservice} pods.
+{brandname} does not provide default caches for {datagridservice} nodes.
 However, you can use cache configuration templates to get started.
 ====
