--- a/documentation/asciidoc/topics/ref_cache_service_crd.adoc
+++ b/documentation/asciidoc/topics/ref_cache_service_crd.adoc
@@ -1,16 +1,27 @@
 [id='ref_cache_service_crd-{context}']
 = Cache Service Resources
 
+//Community includes image
+ifndef::productized[]
 [source,options="nowrap",subs=attributes+]
 ----
 include::yaml_annotated/cr_cache_service.yaml[]
 ----
+endif::productized[]
 
-<1> names the {brandname} cluster.
-<2> specifies the number of pods in the cluster.
-<3> creates {cacheservice} pods.
-<4> adds an authentication secret with user credentials.
-<5> adds a custom encryption secret for secure connections.
-<6> allocates resources to pods.
-<7> configures logging.
-<8> configures services for external traffic.
+//Product excludes image
+ifdef::productized[]
+[source,options="nowrap",subs=attributes+]
+----
+include::yaml_annotated/cr_cache_service_dg.yaml[]
+----
+endif::productized[]
+
+<1> Names the {brandname} cluster.
+<2> Specifies the number of nodes in the cluster.
+<3> Creates {cacheservice} clusters.
+<4> Adds an authentication secret with user credentials.
+<5> Adds a custom encryption secret for secure connections.
+<6> Allocates resources to nodes.
+<7> Configures logging.
+<8> Configures services for external traffic.
